--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,6 @@ environment:
 
 dev_dependencies:
   lints: ^2.0.0
-dependencies: 
-  path: ^1.8.2
+dependencies:
+  dolumns: ^2.0.0
   process_run: ^0.12.3+2
